Fix table borders
Fix border overlapping at table joints

--- a/style.css
+++ b/style.css
@@ -226,7 +226,6 @@ ol span {
 
 table {
     box-shadow: 0px 0px 30px rgba(10, 0, 208, 0.5) inset;
-    border-collapse: collapse;
     border-spacing: 0px;
     width: 100%;
 }
@@ -236,4 +235,17 @@ td {
     border: 3px solid rgba(48, 213, 200, 0.4);
     padding: 10px;
     text-align: left;
+}
+
+th {
+    border-bottom: none;
+}
+
+tr:not(:last-child) td {
+    border-bottom: none;
+}
+
+th:not(:last-child),
+td:not(:last-child) {
+    border-right: none;
 }
